Fix issue with stuck link on mobile device

--- a/src/Shark.Fido2.Portal/wwwroot/css/site.css
+++ b/src/Shark.Fido2.Portal/wwwroot/css/site.css
@@ -231,6 +231,14 @@ input:disabled {
         background-color: var(--color-toc-link-background);
     }
 
+    /* Prevent hover effects on touch devices */
+    @media (hover: none) and (pointer: coarse) {
+        .toc-link:hover {
+            color: var(--color-toc-link-light);
+            background-color: transparent;
+        }
+    }
+
 .form-group {
     margin-bottom: 10px;
 }
